--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   },
   "devDependencies": {
     "@types/node": "^16.4.13",
+    "@typescript-eslint/eslint-plugin": "4",
+    "eslint": "7",
+    "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-node": "11",
+    "eslint-plugin-promise": "4",
     "typescript": "^4.3.5"
   }
 }
