--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "git-commit-msg-linter": "^3.2.6"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@types/node": "^16.4.13",
     "@typescript-eslint/eslint-plugin": "4",
     "eslint": "7",
@@ -16,7 +17,9 @@
     "eslint-plugin-node": "11",
     "eslint-plugin-promise": "4",
     "husky": "^7.0.1",
+    "jest": "^27.0.6",
     "lint-staged": "^11.1.2",
+    "ts-jest": "^27.0.4",
     "typescript": "^4.3.5"
   }
 }
