--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "dependencies": {
     "git-commit-msg-linter": "^3.2.6"
   },
+  "scripts": {
+    "test": "jest --passWithNoTests",
+    "test:staged":"jest --passWithNoTests"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.13",
