--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "git-commit-msg-linter": "^3.2.6"
   },
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "test": "jest --passWithNoTests --watch",
     "test:staged":"jest --passWithNoTests"
   },
   "devDependencies": {
